fix: bug in testemonials title overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -365,7 +365,7 @@ header {
         position: relative;
         left: 45%;
         transform: translateX(-50%);
-        overflow-x: hidden;
+        overflow: hidden;
     }
 
     .testimonials_desc {
